--- a/src/pages/marriage-details/marriage-step1/marriage-step1.scss
+++ b/src/pages/marriage-details/marriage-step1/marriage-step1.scss
@@ -84,4 +84,148 @@ page-marriage-step1 {
         border-radius: 10px;
         background-color: #fff;
     }
+    .img {
+        display: block;
+        margin: -62px auto 0;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 4px solid #fff;
+      }
+      .upload {
+        position: relative;
+        top: -27px;
+        font-size: 2.5em !important;
+        color: #da2e4f !important;
+      }
+      .inputfile {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+      }
+      .inputfile + label {
+        font-size: 2.7em;
+        font-weight: 700;
+        color: white;
+        background-color: transparent;
+        display: inline-block;
+        display: block;
+        margin: auto;
+        width: 20%;
+        text-align: center;
+      }
+             
+      .upload-img {
+        width: 27px;
+        position: absolute;
+        padding: 4px;
+        height: 27px;
+        border: 1px solid #ffffff;
+        border-radius: 50% !important;
+        margin-left: 0px;
+        top: 58px;
+        background-color: #285062;
+        left: 167px;
+    }
+        
+    .menuLogo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 50%;
+        width: 100%;
+        text-align: center;
+        color: white;
+        padding: 5px;
+        background-color: #285062;
+    }
+
+    .menuLogo img {
+        border-radius: 50%;
+        width: 100px;
+        border: 1px solid #fefefe;
+        height: 100px;
+        object-fit: contain;
+    }
+    .slider-content {
+        margin-top: 0px !important;
+      }
+      .slider-info ion-item {
+        padding-left: 0px;
+      }
+      .slider-info ion-label {
+        color: #000 !important;
+        font-size: 14px !important;
+      }
+      .converted-btn-box .item-inner {
+        padding-right: 0px !important;
+        border-bottom: none !important;
+      }
+      .converted-btn-box ion-label {
+        margin: 20px 0px !important;
+      }
+      .converted-btn {
+        width: 100%;
+        padding: 20px !important;
+        font-size: 16px !important;
+        max-width: 230px;
+        margin: 0px auto !important;
+        display: block;
+        background-color: #00a65a;
+      }
+      .slider-info {
+        margin: 0px;
+      }
+      .converted-btn ion-icon {
+        margin-right: 10px;
+      }
+     // .guidelines-hedding {
+     // }
+      .document-img-box {
+        border: 2px solid #999;
+        height: 100px;
+        width: 100%;
+        max-width: 160px !important;
+        max-height: 90px;
+        // margin: 0px auto;
+      }
+      .dotted-border {
+        border: 2px dotted #999;
+      }
+      .document-img-box img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+      //.document-item {}
+      .document-item .item-inner {
+        border-bottom: none !important;
+      }
+      .gender-box .radio-ios .radio-icon {
+        position: relative;
+        display: block;
+        border: 2px solid #285062;
+        width: 19px;
+        height: 19px;
+        border-radius: 50%;
+        top: -2px;
+      }
+      .gender-box .radio-ios .radio-checked .radio-inner {
+        height: 9px;
+        left: 5px;
+        top: 2px;
+      }
+      .deleteIcon {
+        position: relative !important;
+        color: #f81212 !important;
+        margin-left: 70% !important;
+        font-size: 20px !important;
+      }
+      .deleteIcon:before {
+        font-size: 20px !important;
+      }
 }
+
