--- a/src/pages/divorse-details/divorced-step1/divorced-step1.scss
+++ b/src/pages/divorse-details/divorced-step1/divorced-step1.scss
@@ -101,22 +101,22 @@ page-divorced-step1 {
         width: 50px;
         border-radius: 50%;
         border: 4px solid #fff;
-      }
-      .upload {
+    }
+    .upload {
         position: relative;
         top: -27px;
         font-size: 2.5em !important;
         color: #da2e4f !important;
-      }
-      .inputfile {
+    }
+    .inputfile {
         width: 0.1px;
         height: 0.1px;
         opacity: 0;
         overflow: hidden;
         position: absolute;
         z-index: -1;
-      }
-      .inputfile + label {
+    }
+    .inputfile + label {
         font-size: 2.7em;
         font-weight: 700;
         color: white;
@@ -126,5 +126,11 @@ page-divorced-step1 {
         margin: auto;
         width: 20%;
         text-align: center;
-      }
+    }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
