--- a/src/pages/divorse-details/divorced-step3/divorced-step3.scss
+++ b/src/pages/divorse-details/divorced-step3/divorced-step3.scss
@@ -137,4 +137,10 @@ page-divorced-step3 {
         width: 20%;
         text-align: center;
       }
+      .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
