--- a/src/pages/job-details/job-details.scss
+++ b/src/pages/job-details/job-details.scss
@@ -84,6 +84,11 @@ page-job-details {
             border-radius: 10px;
             background-color: #fff;
         }
-    
+        .error-message {
+            font-size: 1em;
+            color: rgb(255, 1, 1);
+            margin-left: 20px;
+            margin-top: 2px;
+        }
 
 }
