--- a/src/pages/marriage-details/marriage-details.scss
+++ b/src/pages/marriage-details/marriage-details.scss
@@ -127,5 +127,10 @@ page-marriage-details {
         width: 20%;
         text-align: center;
       }
-
+      .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
