--- a/src/pages/business-details/business-step3/business-step3.scss
+++ b/src/pages/business-details/business-step3/business-step3.scss
@@ -84,5 +84,11 @@ page-business-step3 {
         border-radius: 10px;
         background-color: #fff;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 
 }
