--- a/src/pages/divorse-details/divorced-step2/divorced-step2.scss
+++ b/src/pages/divorse-details/divorced-step2/divorced-step2.scss
@@ -131,4 +131,10 @@ page-divorced-step2 {
         color: #fff;
         //background-color: #fff;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
