--- a/src/pages/sisters/sisters.scss
+++ b/src/pages/sisters/sisters.scss
@@ -96,4 +96,10 @@ page-sisters {
     .btnNext {
         margin-top: 0%;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
