--- a/src/pages/childrens/childrens.scss
+++ b/src/pages/childrens/childrens.scss
@@ -94,4 +94,10 @@ page-childrens {
     .btnNext {
         margin-top: 0%;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
