--- a/src/pages/marriage-details/marriage-step3/marriage-step3.scss
+++ b/src/pages/marriage-details/marriage-step3/marriage-step3.scss
@@ -94,4 +94,10 @@ page-marriage-step3 {
         border-radius: 10px;
         background-color: #fff;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
