--- a/src/pages/marriage-details/marriage-step1/marriage-step1.scss
+++ b/src/pages/marriage-details/marriage-step1/marriage-step1.scss
@@ -227,5 +227,11 @@ page-marriage-step1 {
       .deleteIcon:before {
         font-size: 20px !important;
       }
+      .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
 
