--- a/src/pages/marriage-details/marriage-step2/marriage-step2.scss
+++ b/src/pages/marriage-details/marriage-step2/marriage-step2.scss
@@ -88,4 +88,10 @@ page-marriage-step2 {
         color: #fff;
         //background-color: #fff;
     }
+    .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
