--- a/src/pages/brothers/brothers.scss
+++ b/src/pages/brothers/brothers.scss
@@ -2,8 +2,8 @@ page-brothers {
     ion-content.content {
         background-color: #003466;
     }
-    .login-box-section {}
-    .login-box {
+    //.login-box-section {}
+   // .login-box {
         // z-index: 99;
         // position: absolute;
         // right: 0;
@@ -11,7 +11,7 @@ page-brothers {
         // width: 100%;
         // top: 40%;              
         // transform: translate(0%, -50%);
-    }
+  //  }
     ion-slide {
         margin-top:  20%;
     }
