set global user after login and registration

--- a/src/pages/sisters/sisters.scss
+++ b/src/pages/sisters/sisters.scss
@@ -73,7 +73,7 @@ page-sisters {
         display: block;
         font-size: 16px;
         background-color: #003466;
-        width: 160px;
+        width: 100px;;
         border: 1px solid #fff;
         height: 46px;
     }
