--- a/src/pages/marriage-details/marriage-step3/marriage-step3.scss
+++ b/src/pages/marriage-details/marriage-step3/marriage-step3.scss
@@ -2,7 +2,7 @@ page-marriage-step3 {
     ion-content.content {
         background-color: #003466;
     }
-    .login-box-section {}
+  //  .login-box-section {}
     .login-box {
         z-index: 99;
         position: absolute;
@@ -78,7 +78,7 @@ page-marriage-step3 {
         max-width: unset;
     }
     .login-btn {
-        margin: 0px auto;
+       // margin: 0px auto;
         display: block;
         font-size: 16px;
         background-color: #003466;
