--- a/src/pages/sign-up/step3/step3.scss
+++ b/src/pages/sign-up/step3/step3.scss
@@ -2,7 +2,7 @@ page-step3 {
     ion-content.content {
         background-color: #003466;
     }
-    .login-box-section {}
+    //.login-box-section {}
     .login-box {
         z-index: 99;
         position: absolute;
