--- a/src/pages/sign-up/step4/step4.scss
+++ b/src/pages/sign-up/step4/step4.scss
@@ -2,7 +2,7 @@ page-step4 {
     ion-content.content {
         background-color: #003466;
     }
-    .login-box-section {}
+   // .login-box-section {}
     .login-box {
         z-index: 99;
         position: absolute;
@@ -72,9 +72,9 @@ page-step4 {
         display: block;
         font-size: 16px;
         background-color: #003466;
-        width: 160px;
+        width: 100px;
         border: 1px solid #fff;
-        height: 46px;
+        height: 35px;
     }
     .logo-box {
         width: 100px;
