--- a/src/pages/user/user-info/user-info.scss
+++ b/src/pages/user/user-info/user-info.scss
@@ -1,4 +1,4 @@
-page-news {
+page-user-info {
     .toolbar-background {
         border-bottom: 1px solid #C9C9C9;
         background: #003466;
@@ -18,11 +18,6 @@ page-news {
         margin-top: 15px;
         width: 26px;
         float: right;
-    }
-    .back-icon-img {
-        margin-top: 10px;
-        width: 26px;
-        float: left;
     }
     .no-padding {
         padding: 0px;
@@ -45,6 +40,11 @@ page-news {
     .user-img img {
         width: 100%;
     }
+    .back-icon-img {
+        margin-top: 10px;
+        width: 26px;
+        float: left;
+    }
     .user-info-heaser small {
         color: #fff;
         font-size: 8px;
@@ -57,13 +57,41 @@ page-news {
     }
     .title-bg-blue {
         font-size: 20px;
-        text-align: center;
-        padding: 10px;
+        padding: 10px 15px;
         color: #fff;
         margin: 10px 0px;
     }
+    .slider-box {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        height: 100%;
+        border-radius: 20px !important;
+    }
+    .size-box {
+        border-radius: 20px !important;
+        overflow: hidden;
+    }
     .pad-page-10 {
         padding: 0px 10px !important;
+    }
+    .size-box-slider ion-img {
+        width: 100% !important;
+        min-height: 180px;
+        height: 180px;
+    }
+    .swiper-pagination {
+        display: none;
+    }
+    .size-box-slider ion-card {
+        border-radius: 20px !important;
+        box-shadow: none !important;
+        margin: 0px !important;
+        width: 100%;
+    }
+    .size-box-slider ion-img img {
+        width: 100% !important;
+        height: 100%;
     }
     // ===========================
     .new-box {
@@ -76,9 +104,9 @@ page-news {
     }
     .img-box {
         border: 2px solid #003466;
-        width: 40px;
+        width: 80px;
         border-radius: 10px;
-        height: 40px;
+        height: 80px;
         overflow: hidden;
         float: left;
     }
@@ -87,20 +115,31 @@ page-news {
         width: 100%;
         height: 100%;
     }
-    .new-cuntent-box {
-        float: right !important;
-        width: calc(100% - 40px) !important;
-        padding-left: 10px;
-        // margin-top: 10px;
+    .user-info-box {
+        // width: calc(100% - 80px) !important;
+        // padding-left: 10px;
     }
-    .new-cuntent-box h3 {
+    .user-info-box h3 {
         margin: 0px;
         font-size: 16px;
         color: #003466;
     }
-    .new-cuntent-box p {
+    .user-info-box p {
         color: #979593;
         margin: 4px 0px 0px;
-        font-size: 12px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .new-cuntent-box p span {
+        color: #003466;
+    }
+    .login-btn {
+        margin: 0px auto;
+        display: block;
+        font-size: 16px;
+        background-color: #003466;
+        max-width: 160px;
+        border: 1px solid #fff;
+        height: 46px;
     }
 }
