business and matrimony done

--- a/src/pages/matrimony-details/matrimony-details.scss
+++ b/src/pages/matrimony-details/matrimony-details.scss
@@ -9,7 +9,7 @@ page-matrimony-details {
     }
     h2.header-title-2 {
         margin: 0px;
-        text-align: center;
+       // text-align: center;
         color: #fff;
         font-size: 18px;
         line-height: 48px;
