--- a/src/pages/business-info/business-info.scss
+++ b/src/pages/business-info/business-info.scss
@@ -9,7 +9,7 @@ page-business-info {
     }
     h2.header-title-2 {
         margin: 0px;
-        text-align: center;
+       // text-align: center;
         color: #fff;
         font-size: 18px;
         line-height: 48px;
