--- a/src/pages/business/business.scss
+++ b/src/pages/business/business.scss
@@ -14,10 +14,17 @@ page-business {
         font-size: 18px;
         line-height: 48px;
     }
+    // .menu-list-img {
+    //     margin-top: 15px;
+    //     width: 26px;
+    //     float: right;
+    // }
     .menu-list-img {
-        margin-top: 15px;
-        width: 26px;
+        margin-top: 12px;
+        margin-right: 10px;
+        font-size: 1.9em;
         float: right;
+        color: #fff;
     }
     .back-icon-img {
         margin-top: 10px;
