--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,9 +15,11 @@ page-home {
         line-height: 48px;
     }
     .menu-list-img {
-        margin-top: 15px;
-        width: 26px;
+        margin-top: 12px;
+        margin-right: 10px;
+        font-size: 1.9em;
         float: right;
+        color: #fff;
     }
     .no-padding {
         padding: 0px;
