Search func added

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,4 +1,4 @@
-page-user-list {
+page-search {
     .toolbar-background {
         border-bottom: 1px solid #C9C9C9;
         background: #003466;
@@ -71,7 +71,7 @@ page-user-list {
     }
     .pad-page-10 {
         padding: 0px 10px !important;
-        margin-top: 10px;
+        margin-top: 80px;
     }
     // ===========================
     .new-box {
@@ -112,7 +112,7 @@ page-user-list {
         font-size: 12px;
     }
     .search-box {
-        background-color: #c9c9c9;
+        //background-color: #c9c9c9;
         position: fixed;
         width: 100%;
         padding: 4px 0px;
@@ -121,5 +121,11 @@ page-user-list {
         border-radius: 30px !important;
         border: none !important;
     }
-
+    .cancelbtn {
+        width: 30%;
+        border-radius: 30px !important;
+        padding: 4px 0px;
+        float: right;
+        margin-right: 5px;
+    }
 }
