--- a/src/pages/edit-profile/edit-business-profile/edit-business-step1/edit-business-step1.scss
+++ b/src/pages/edit-profile/edit-business-profile/edit-business-step1/edit-business-step1.scss
@@ -1,3 +1,107 @@
 page-edit-business-step1 {
-
+    ion-content.content {
+        background-color: #003466;
+    }
+   // .login-box-section {}
+    .login-box {
+        z-index: 99;
+        position: absolute;
+        right: 0;
+        left: 0;
+        width: 100%;
+        top: 50%;
+        transform: translate(0%, -50%);
+    }
+    .login-user-info ion-item {
+        background-color: transparent;
+        // border: none !important;
+        padding: 0px;
+        margin-bottom: 15px;
+    }
+    .login-user-info {
+        width: 100%;
+        padding: 30px 20px 15px;
+        margin: 0px auto;
+    }
+    .login-user-info .item-block:first-child {
+        border-top: none;
+    }
+    .login-user-info .item-block:last-child {
+        border-bottom: none;
+    }
+    .login-user-info .item-inner {
+        border: none !important;
+        padding: 0px !important;
+    }
+    .login-user-info ion-label {
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        border: 1px solid #fff !important;
+        margin: 0px !important;
+    }
+    .login-user-info ion-label ion-icon {
+        margin: 0px !important;
+        line-height: 50px;
+        font-size: 26px;
+        color: #fff;
+    }
+    .login-user-info ion-input input {
+        border: 1px solid #fff;
+        margin: 0px !important;
+        width: 100% !important;
+        padding: 0px 10px;
+        font-size: 16px;
+        color: #003466;
+        height: 50px;
+        background-color: #C9C9C9;
+    }
+    .login-user-info ion-select {
+        border: 1px solid #fff;
+        margin: 0px !important;
+        padding: 15px 10px;
+        font-size: 16px;
+        color: #003466;
+        width: calc(100% - 50px) !important;
+        height: 50px;
+        background-color: #C9C9C9;
+        max-width: unset;
+    }
+    .login-btn {
+        margin: 0px auto;
+        display: block;
+        font-size: 16px;
+        background-color: #003466;
+        width: 100px;
+        border: 1px solid #fff;
+        height: 35px;
+    }
+    .logo-box {
+        width: 100px;
+        margin: 0px auto;
+        height: 100px;
+        overflow: hidden;
+        border-radius: 10px;
+        background-color: #fff;
+    }
+    .deleteIcon {
+        position: absolute !important;
+        color: #f81212 !important;
+        margin-left: 10% !important;
+        font-size: 20px !important;
+      }
+      .deleteIcon:before {
+        font-size: 20px !important;
+      }
+      .document-img-box {
+          padding: 2px;
+          height: 100px;
+          width: 75px;
+      }
+      .error-message {
+        font-size: 1em;
+        color: rgb(255, 1, 1);
+        margin-left: 20px;
+        margin-top: 2px;
+    }
 }
