push jobedit page

--- a/src/pages/edit-profile/edit-job-details/edit-job-details/edit-job-details.scss
+++ b/src/pages/edit-profile/edit-job-details/edit-job-details/edit-job-details.scss
@@ -1,4 +1,4 @@
-page-job-details {
+page-edit-job-details {
     ion-content.content {
         background-color: #003466;
     }
@@ -90,5 +90,4 @@ page-job-details {
         margin-left: 20px;
         margin-top: 2px;
     }
-
 }
